# Project_Kathisto

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md
assets/models/objs/gameEnvironment/: manifest.txt
lib/: CMakeLists.txt
lib/freeglut/lib/: freeglut_static.lib  freeglut_staticd.lib  freeglutd.lib
lib/freeglut/src/: fg_geometry.c
lib/imgui/lib/: imgui_impl.lib
src/: CMakeLists.txt  includes.h  main.c
src/game/: CMakeLists.txt  Game.c  Game.h  GameConstants.c  GameConstants.h  GameIncludes.h  GameObject.c  GameObject.h  GameObjectManager.c  GameObjectManager.h  GameTypes.h  Physics.c  Physics.h  Rendering.c  Rendering.h
src/game/GameObjects/: Camera.c  Camera.h  CameraFPS.c  CameraFPS.h  CameraThirdPerson.c  CameraThirdPerson.h  Cube.c  Cube.h  CubeG.c  CubeG.h  Floor.c  Floor.h  JumpPad.c  JumpPad.h  Player.c  Player.h
src/game/GameObjects/GameGeometry/: DebugGeo.c  DebugGeo.h  Monkey.c  Monkey.h
src/game/GameObjects/GameGeometry/DebugLevel/: Ceilings.c  Ceilings.h  Floor_1.c  Floor_1.h  Floor_2.c  Floor_2.h  Floors.c  Floors.h  Walls.c  Walls.h
src/game/GameObjects/Teleporters/: Teleporters.c  Teleporters.h
src/gui/: Gui.c  Gui.h
src/loader/: CMakeLists.txt
src/loader/model/: objLoader.c  objLoader.h  objStructure.h
src/loader/model/objLoader/: objLoader.h  objStructure.h
src/math/: Vector.c  Vector.h  mathUtils.c  mathUtils.h
src/utilities/: CMakeLists.txt  vectorUtil.c  vectorUtil.h
src/window/: Events.c  Events.h  Window.c  Window.h
